[package]
name = "ngrok_get_tunnel_url"
version = "1.0.0"
edition = "2024"
description = "Use this crate to get the public url of a ngrok tunnel"
license = "MIT"

[dependencies]
reqwest = { version="0.12.15", features=["rustls-tls", "json"], default-features=false }
thiserror = "2.0"
serde = "1.0"
serde_derive = "1.0"
